Fixed navbar so it doesn't spill in to two rows. Collapses early.

--- a/css/index.scss
+++ b/css/index.scss
@@ -269,7 +269,7 @@ img.about-left {
             background: #5e6062;
         }
 
-        @media (max-width: 800px) {
+        @media (max-width: 960px) {
             display: block;
             box-sizing: inherit;
             width: 100%;
